fix: align card name and duration

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -81,7 +81,7 @@
   }
 
   .card__footer {
-    padding: 6px 10px 0px 20px;
+    padding: 6px 10px 0px 10px;
   }
 
   .card__duration {
